ACTUALIZACION 1
<< Programacion basica de bases de datos >>
- Creacion de paginas web:
	- Pagina principal para dar la bienvenida al usuario.
	- Pagina para consultar y mostrar los registros de la tabla region.
	- Pagina para insercion de registros en la tabla region.
	- Pagina web para mostrar errores inesperados de la aplicacion.

ACTUALIZACION 2
<< Uso basico de bootstrap >>
- Inclusion de archivos para uso de bootstrap.
- Creacion y uso de archivo css para definicion de estilo visual personalizado.
- Uso de clases de bootstrap para personalizar el aspecto de los elementos.
- Uso de ids y clases propias para personalizar el aspecto de los elementos.
MEJORAS:
+ Aplicacion web mas amigable para el usuario final.

ACTUALIZACION 3
<< Implementacion de Arquitectura VC >>
- Creacion de archivos secundarios(vistas) para almacenar el contenido de cada pagina web.
- Actualizacion de paginas web(controladores) cargando su correspondiente 
	archivo de vista en lugar de mostrar html directamente.
MEJORAS:
+ Facilidad para concentrarse en la logica y diseño visual por separado.
+ Facilidad para que distintas personas contribuyan en un mismo proyecto.

ACTUALIZACION 4
<< Implementacion de Patron Decorator >>
- Creacion de archivo para almacenar la estructura comun del sitio (main-layout).
- Captura del contenido de las vistas e inclusion de main-layout.
MEJORAS:
+ Vistas mas simples y faciles de entender.
+ Facilidad para realizar cambios a la estructura visual de la aplicacion.