@@ -1,5 +1,5 @@
 <?php
-/* @var $errorInesperado string */
+/* @var $exception Exception */
 
 // Activando reporte de errores fatales y en tiempo de compilacion
 error_reporting(E_ERROR | E_COMPILE_ERROR);
@@ -7,15 +7,15 @@ error_reporting(E_ERROR | E_COMPILE_ERROR);
 session_start();
 
 // Inicializando variables
-$errorInesperado = '';
+$exception = null;
 
 // Consultando el error ocurrido almacenado en la sesion (si lo hay)
-$errorInesperado = isset($_SESSION['errorInesperado'])? $_SESSION['errorInesperado'] : '';
+$exception = isset($_SESSION['exception'])? $_SESSION['exception'] : null;
 // Eliminando el error de la sesion, de no hacerlo, mas tarde podriamos 
 // ver el mensaje de error aun cuando dicho error no haya ocurrido
-unset($_SESSION['errorInesperado']);
+unset($_SESSION['exception']);
 // Si no hay error que mostrar, no mostrar la pagina
-if( empty($errorInesperado) ){
+if( empty($exception) ){
 	exit();
 }
 
